--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -16,6 +16,7 @@
   <string name="speak">Runā</string>
   <string name="help">Palīdzība</string>
   <string name="verse">Pants</string>
+  <string name="administration">Administrēšana</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Izvēlaties Grāmatu</string>
   <string name="choosePassageChapterName">Izvēlaties Nodaļu</string>
@@ -116,11 +117,18 @@
   <string name="error_downloading">Kļūda lejupielādējot. Lūdzu, pārbaudiet savu interneta pieslēgumu.</string>
   <string name="no_internet_connection">Nevarēja izveidot savienojumu ar internetu</string>
   <string name="storage_space_warning">Atmiņā nepietiekama vieta .</string>
-  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam Jūs tiksiet pārvietoti uz galveno logu.\n\nDownload more documents later by navigating to Menu button/More/Download documents.</string>
+  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam tiksiet pārslēgts uz galveno logu.\n\nLejuplādējiet vairāk dokumentus vēlāk, navigējot ar izvēlnes taustiņu Menu button/Vairāk/Lejuplādēt dokumentus.</string>
   <string name="wait_for_bible_not_yet">Lūdzu uzgaidiet. Bībeles uzstādīšana vēl nav pabeigta.</string>
   <string name="download_complete_no_bibles">Neviena Bībele nav instalēta. Lūdzu nospiediet atpakaļ\nUn mēģiniet vēlreiz.</string>
   <string name="too_many_jobs">Pārāk daudz aktīvu uzdevumu. Lūdzu uzgaidiet kamēr daži tiek izpildīti un mēģiniet vēlreiz.</string>
   <string name="document_not_installed">Lūdzu lejuplādējiet \'%s\'.</string>
+  <!--Install zip file-->
+  <string name="install_zip">Ielādēt dokumentu no Zip faila</string>
+  <string name="install_zip_successfull">Modulis ir veiksmīgi uzinstalēts</string>
+  <string name="extracting_zip_file">Notiek Zip faila atvēršana</string>
+  <string name="checking_zip_file">Pārbauda doto failu</string>
+  <string name="invalid_module">Fails nesatur derīgu SWORD moduli</string>
+  <string name="module_already_installed">Fails satur moduli, kurš jau ir instalēts</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Lāsīšanas plāns</string>
   <string name="rdg_plan_selector_title">Izvēlies lasīšanas plānu</string>
