--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -16,6 +16,7 @@
   <string name="speak">Høytlesing</string>
   <string name="help">Hjelp</string>
   <string name="verse">Vers</string>
+  <string name="administration">Administrasjon</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Velg bok</string>
   <string name="choosePassageChapterName">Velg kapittel</string>
@@ -121,6 +122,13 @@
   <string name="download_complete_no_bibles">Ingen bibler ble installert. Trykk tilbake og prøv igjen.</string>
   <string name="too_many_jobs">For mange jobber utføres. Vennligst vent til noen er fullført før du prøver igjen.</string>
   <string name="document_not_installed">Vennligst last ned \'%s\'</string>
+  <!--Install zip file-->
+  <string name="install_zip">Les inn dokument fra ZIP</string>
+  <string name="install_zip_successfull">Modulen ble installert</string>
+  <string name="extracting_zip_file">Pakker ut ZIP-fil nå...</string>
+  <string name="checking_zip_file">Kontrollerer filen...</string>
+  <string name="invalid_module">Filen inneholder ikke en gyldig SWORD-modul</string>
+  <string name="module_already_installed">Filen inneholder en modul som allerede er installert</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Leseplan</string>
   <string name="rdg_plan_selector_title">Velg en leseplan</string>
